добавлен тест загрузки данных из Csv-файла

--- a/MyLib/MyLib.csproj
+++ b/MyLib/MyLib.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Csv.cs" />
+    <Compile Include="CsvToHtml.cs" />
     <Compile Include="CsvLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
