--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TCsv.cs" />
+    <Compile Include="TCsvToHtml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TCsvLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
