--- a/MyLib/MyLib.csproj
+++ b/MyLib/MyLib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CsvToHtml.cs" />
     <Compile Include="CsvLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThemeManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
